// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavBarSearch NavBarSearch 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 crvLSl"
    >
      <form
        class="NavBarSearch-sc-1aq0npd-0 lfszCe"
      >
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 iHUNrd"
          role="search"
        >
          <div
            class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
          >
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-labelledby="global-search"
                  aria-required="true"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="navbar-search"
                  placeholder="Search Nulogy..."
                  required=""
                  type="search"
                />
              </div>
            </div>
          </div>
          <button
            aria-label="global-search"
            id="global-search"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 dkBAgY"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="search"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots NavBarSearch With custom name 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 crvLSl"
    >
      <form
        class="NavBarSearch-sc-1aq0npd-0 lfszCe"
      >
        <div
          class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 iHUNrd"
          role="search"
        >
          <div
            class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 erVIOB"
          >
            <div
              class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fbOeeQ"
            >
              <div
                class="Box-sc-1qu1edy-0 hxUhcg"
                display="flex"
              >
                <input
                  aria-invalid="false"
                  aria-labelledby="global-search-2"
                  aria-required="true"
                  class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
                  id="navbar-search"
                  placeholder="Search Nulogy..."
                  required=""
                  type="search"
                />
              </div>
            </div>
          </div>
          <button
            aria-label="global-search-2"
            id="global-search-2"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 dkBAgY"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="24px"
              icon="search"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
